changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# node dependencies
-/backend/node_modules
-/backend/package-lock.json
-/backend/.env
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+
+.env
 
 package-lock.json
 
