--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mux-demo",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:9000/",
+  "proxy": "http://192.168.40.115:9000/",
   "dependencies": {
     "@mux/mux-node": "^5.1.0",
     "@mux/studio-embed": "^1.1.1",
@@ -14,7 +14,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   },
   "scripts": {
     "start": "react-scripts start",
