--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "proxy": "http://localhost:9000/",
   "dependencies": {
-    "@mux/mux-node": "^5.1.0",
-    "@mux/studio-embed": "^1.1.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "body-parser": "^1.20.0",
-    "concurrently": "^7.2.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "exact": "^0.8.0",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@mux/mux-node": "5.1.0",
+    "@mux/studio-embed": "1.1.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "body-parser": "1.20.0",
+    "concurrently": "7.2.2",
+    "cors": "2.8.5",
+    "dotenv": "16.0.1",
+    "exact": "0.8.0",
+    "express": "4.18.1",
+    "jsonwebtoken": "8.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
@@ -48,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "2.0.19"
   }
 }
