--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:9000/",
   "dependencies": {
     "@mux/mux-node": "5.1.0",
+    "@mux/mux-player-react": "0.1.0-beta.23",
     "@mux/studio-embed": "1.1.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "8.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4"
   },
